[package]
name = "erc20"
description = "Casper Anyswap Integration - ERC 20 contract written in Rust"
version = "0.1.0"
authors = ["Jihed CHALGHAF <chalghaf.jihed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="1.3.2" }
types = { package = "casper-types", version="1.3.2" }
hex = "0.4.3"

[[bin]]
name = "erc20"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
